[package]
name = "snake_rust"
version = "0.1.0"
authors = ["NekoDanukino <fatihsatrio@nigge.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dependencies.sdl2]
version = "0.34"
features = ["static-link", "bundled"]
